# Biohash-Implementation

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
.github/workflows/: python-package.yml
src/auth_biohash/: bio_hash.py  exceptions.py  hash.py  normalization.py  protocols.py  random_token.py
src/auth_biohash/binary_encoding/: __init__.py  base.py  gray.py  threshold.py
tests/: test_bio_hash.py  test_normalization.py  test_orthonormalization.py  test_random_token.py
