[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auth_biohash"
version = "0.0.1"
authors = [
    { name="Cristopher Hernandez", email="22552070+CristopherH95@users.noreply.github.com" },
]
description = "Python-based implementation of the Biohash algorithm"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy~=1.25.0",
    "git+https://github.com/CPP-EEG-Authentication-Defense-Project/Feature-Encoding.git@0.0.1",
    "git+https://github.com/CPP-EEG-Authentication-Defense-Project/Model-Framework.git@0.1.0"
]